create career sec

--- a/index.html
+++ b/index.html
@@ -674,6 +674,47 @@
       </div>
     </section>
 
+    <section class="career py-5 ">
+      <div class="container d-flex flex-column align-items-center justify-content-center">
+        <span class="title p-2">CHOOSE YOUR CAREER</span>
+        <h2>Discover Your Gain</h2>
+        <div class="content d-flex ">
+          <div class="left-sec d-flex align-items-center justify-content-center">
+            <div class="content ps-2">
+              <h2>Start from today</h2>
+              <p>Join our training courses &
+                Build your skill.</p>
+              <form class="load-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
+                  <span>All Blog Post</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
+
+            </div>
+            <div class="image">
+              <img src="./assets/img/career/leftBacG.webp" />
+            </div>
+          </div>
+          <div class="right-sec d-flex align-items-center justify-content-center">
+            <div class="content ps-2">
+              <h2>Start from today</h2>
+              <p>Join our training courses &
+                Build your skill.</p>
+              <form class="load-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
+                  <span>All Blog Post</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
+            </div>
+            <div class="image">
+              <img src="./assets/img/career/rightBacB.webp" />
+            </div>
+          </div>
+        </div>
+    </section>
+
     <section class="popular py-5">
       <div class="container">
         <div class="popular-header pb-5">
@@ -693,7 +734,7 @@
             <img src="./assets/img/popular/pic1.webp" class="card-img-top p-2" alt="...">
             <div class="card-body">
               <div class="blog-info d-flex ">
-                <div >
+                <div>
                   <img src="./assets/img/popular/date.svg" />
                   <span>14 June 2023</span>
                 </div>
@@ -706,19 +747,19 @@
               <p class="card-text">velit esse cillum dolore eu fugiat nulla
                 pariatur. Excepteur sint occaecat
                 cupidatat</p>
-                <form class="load-btn d-flex" role="search">
-              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
-                <span>read more</span>
-                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
-              </button>
-            </form>
+              <form class="load-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                  <span>read more</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
             </div>
           </div>
           <div class="card -flex align-items-center flex-grow-1" style="width: 18rem;">
             <img src="./assets/img/popular/pic2.webp" class="card-img-top p-2" alt="...">
             <div class="card-body">
               <div class="blog-info d-flex ">
-                <div >
+                <div>
                   <img src="./assets/img/popular/date.svg" />
                   <span>14 June 2023</span>
                 </div>
@@ -731,19 +772,19 @@
               <p class="card-text">velit esse cillum dolore eu fugiat nulla
                 pariatur. Excepteur sint occaecat
                 cupidatat</p>
-                <form class="load-btn d-flex" role="search">
-              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
-                <span>read more</span>
-                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
-              </button>
-            </form>
+              <form class="load-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                  <span>read more</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
             </div>
           </div>
           <div class="card -flex align-items-center flex-grow-1" style="width: 18rem;">
             <img src="./assets/img/popular/pic3.webp" class="card-img-top p-2" alt="...">
             <div class="card-body">
               <div class="blog-info d-flex ">
-                <div >
+                <div>
                   <img src="./assets/img/popular/date.svg" />
                   <span>14 June 2023</span>
                 </div>
@@ -756,17 +797,18 @@
               <p class="card-text">velit esse cillum dolore eu fugiat nulla
                 pariatur. Excepteur sint occaecat
                 cupidatat</p>
-                <form class="load-btn d-flex" role="search">
-              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
-                <span>read more</span>
-                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
-              </button>
-            </form>
+              <form class="load-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                  <span>read more</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <section class="newsLater">
       <div class="container">
         <div class="newsLater-form d-flex  align-items-center justify-content-center">
