--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="features pb-5">
       <div class="container d-flex flex-row">
 
         <div class="left-side">
