create courses page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a class="nav-link" aria-current="page" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Courses</a>
+              <a class="nav-link" href="courses.html">Courses</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pages</a>
