create course details page

--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <!-- home style -->
     <link rel="stylesheet" href="./assets/css/home.css" />
-    <!-- home style -->
+    <!-- courses style -->
     <link rel="stylesheet" href="./assets/css/courses.css" />
 </head>
 
@@ -110,10 +110,11 @@
 
     </header>
     <main>
-        <section class="courseHero d-flex flex-column align-items-center justify-content-center">
+        <section class="courseHero">
+            <div class="container d-flex flex-column align-items-center justify-content-center">
             <h1>Courses</h1>
             <p>Home <span >//</span> Course</p>
-
+            </div>
         </section>
         <section class="courses py-5">
             <div class="container">
