--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h1>Achieving Your Dreams Through Education</h1>
             <p>We are experienced in educationl platform and skilled strategies for the success of our online learning.
             </p>
-            <form class="find-btn d-flex" role="search">
+            <form action="courses.html" method="get" class="find-btn d-flex" role="search">
               <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                 <span>Find courses</span>
                 <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
@@ -239,7 +239,7 @@
                   <span>Samantha</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
@@ -293,8 +293,8 @@
                   <span>Charles</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
-                    <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
+                    <button class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
                     </button>
@@ -346,7 +346,7 @@
                   <span>Morgan</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
@@ -400,7 +400,7 @@
                   <span>Brian Brewer</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
@@ -453,7 +453,7 @@
                   <span>Rodriquez</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
@@ -506,7 +506,7 @@
                   <span>Morgan</span>
                 </div>
                 <div>
-                  <form class="enroll-btn d-flex" role="search">
+                  <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                       <span>Enroll</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
