createsign up page

--- a/courses.html
+++ b/courses.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <!-- home style -->
     <link rel="stylesheet" href="./assets/css/home.css" />
-    <!-- courses style -->
-    <link rel="stylesheet" href="./assets/css/courses.css" />
+    <!-- shared style -->
+    <link rel="stylesheet" href="./assets/css/shared.css" />
 </head>
 
 <body>
@@ -110,7 +110,7 @@
 
     </header>
     <main>
-        <section class="courseHero">
+        <section class="hero-sec">
             <div class="container d-flex flex-column align-items-center justify-content-center">
             <h1>Courses</h1>
             <p>Home <span >//</span> Course</p>
@@ -172,7 +172,7 @@
                                     <span>Samantha</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
@@ -227,7 +227,7 @@
                                     <span>Charles</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
@@ -281,7 +281,7 @@
                                     <span>Morgan</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
@@ -336,7 +336,7 @@
                                     <span>Brian Brewer</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
@@ -390,7 +390,7 @@
                                     <span>Rodriquez</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
@@ -444,7 +444,7 @@
                                     <span>Morgan</span>
                                 </div>
                                 <div>
-                                    <form class="enroll-btn d-flex" role="search">
+                                    <form action="course.html" method="get" class="enroll-btn d-flex" role="search">
                                         <button type="submit"
                                             class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
                                             <span>Enroll</span>
