--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </li>
 
           </ul>
-          <form class="create-btn d-flex" role="search">
+          <form action="signup.html" method="get" class="create-btn d-flex" role="search">
             <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill p-3">
               <span>Create Account</span>
             </button>
