--- a/courses.html
+++ b/courses.html
@@ -86,7 +86,7 @@
                             <a class="nav-link" aria-current="page" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active  p-2 mb-2" href="#">Courses</a>
+                            <a class="nav-link active  p-2 mb-2" href="courses.html">Courses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pages</a>
@@ -99,7 +99,7 @@
                         </li>
 
                     </ul>
-                    <form class="create-btn d-flex" role="search">
+                    <form action="signup.html" method="get" class="create-btn d-flex" role="search">
                         <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill p-3">
                             <span>Create Account</span>
                         </button>
