--- a/index.html
+++ b/index.html
@@ -673,7 +673,81 @@
 
       </div>
     </section>
+    <section class="testimonial pb-5">
+      <div class="container d-flex flex-column align-items-center justify-content-center gap-3">
+        <div class="testimonial-header rounded-pill">
+          <div class="testimonial-icon">
+            <img src="./assets/img/testimonial/Icon.svg" />
+            <div class="testimonial-header-disc">
+              <h3>3K+</h3>
+              <p>Successfully Trained</p>
+            </div>
+          </div>
+          <div class="testimonial-icon">
+            <img src="./assets/img/testimonial/Icon (1).svg" />
+            <div class="testimonial-header-disc">
+              <h3>15K+</h3>
+              <p>Classes Completed</p>
+            </div>
 
+          </div>
+          <div class="testimonial-icon">
+            <img src="./assets/img/testimonial/Icon (2).svg" />
+            <div class="testimonial-header-disc">
+              <h3>97K+</h3>
+              <p>Satisfaction Rate</p>
+            </div>
+          </div>
+          <div class="testimonial-icon">
+            <img src="./assets/img/testimonial/Icon (3).svg" />
+            <div class="testimonial-header-disc">
+              <h3>102K+</h3>
+              <p>Students Community</p>
+            </div>
+          </div>
+        </div>
+        <span class="title  p-2">TESTIIMONIAL</span>
+        <h2>Creating A Community Of
+          Life Long Learners.</h2>
+        <div class="testimonial-content d-flex gap-5 pt-5">
+          <div class="card-testimonial border rounded-4 p-4">
+            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+            <p>“Lorem ipsum dolor sit amet, elit, sed
+              do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Orci
+              nulla pellentesque dignissim enim.
+              Amet consectetur adipiscing”</p>
+            <h4>Kathy Sullivan</h4>
+            <h5>CEO at ordian it</h5>
+          </div>
+
+          <div class="card-testimonial border rounded-4 p-4">
+            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+            <p>“Lorem ipsum dolor sit amet, elit, sed
+              do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Orci
+              nulla pellentesque dignissim enim.
+              Amet consectetur adipiscing”</p>
+            <h4>Kathy Sullivan</h4>
+            <h5>CEO at ordian it</h5>
+          </div>
+
+          <div class="card-testimonial border rounded-4 p-4">
+            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+            <p>“Lorem ipsum dolor sit amet, elit, sed
+              do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Orci
+              nulla pellentesque dignissim enim.
+              Amet consectetur adipiscing”</p>
+            <h4>Kathy Sullivan</h4>
+            <h5>CEO at ordian it</h5>
+          </div>
+
+
+
+        </div>
+      </div>
+    </section>
     <section class="career py-5 ">
       <div class="container d-flex flex-column align-items-center justify-content-center">
         <span class="title p-2">CHOOSE YOUR CAREER</span>
@@ -903,6 +977,12 @@
       </div>
     </div>
   </footer>
+  <!-- Splide JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+
+  <!-- Auto Scroll Extension -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.4/dist/js/splide-extension-auto-scroll.min.js"></script>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
