--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,7 @@
                             <a class="nav-link " aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">About Us</a>
+                            <a class="nav-link" aria-current="page" href="index.html#about">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active  p-2 mb-2" href="courses.html">Courses</a>
@@ -92,7 +92,7 @@
                             <a class="nav-link" href="#">Pages</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="index.html#blogs">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
