--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <a class="nav-link active  p-2 mb-2" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About Us</a>
+              <a class="nav-link" aria-current="page" href="#about">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="courses.html">Courses</a>
@@ -90,7 +90,7 @@
               <a class="nav-link" href="#">Pages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="#blogs">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -525,7 +525,7 @@
       </div>
     </section>
 
-    <section class="about py-5">
+    <section id="about" class="about py-5">
       <div class="container">
         <div class="aboutUs d-flex flex-row justify-content-center align-items-center gap-0 gap-lg-5">
 
@@ -709,45 +709,130 @@
         <span class="title  p-2">TESTIIMONIAL</span>
         <h2>Creating A Community Of
           Life Long Learners.</h2>
-        <div class="testimonial-content d-flex gap-5 pt-5">
-          <div class="card-testimonial border rounded-4 p-4">
-            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
-            <p>“Lorem ipsum dolor sit amet, elit, sed
-              do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Orci
-              nulla pellentesque dignissim enim.
-              Amet consectetur adipiscing”</p>
-            <h4>Kathy Sullivan</h4>
-            <h5>CEO at ordian it</h5>
+        <div id="carouselExampleSlidesOnly" class="carousel slide p-3" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="testimonial-content d-flex pt-5">
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+
+
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonial-content d-flex  pt-5">
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+
+
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonial-content d-flex pt-5">
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+                <div class="card-testimonial border rounded-4 p-4">
+                  <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
+                  <p>“Lorem ipsum dolor sit amet, elit, sed
+                    do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Orci
+                    nulla pellentesque dignissim enim.
+                    Amet consectetur adipiscing”</p>
+                  <h4>Kathy Sullivan</h4>
+                  <h5>CEO at ordian it</h5>
+                </div>
+
+
+
+              </div>
+            </div>
           </div>
-
-          <div class="card-testimonial border rounded-4 p-4">
-            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
-            <p>“Lorem ipsum dolor sit amet, elit, sed
-              do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Orci
-              nulla pellentesque dignissim enim.
-              Amet consectetur adipiscing”</p>
-            <h4>Kathy Sullivan</h4>
-            <h5>CEO at ordian it</h5>
-          </div>
-
-          <div class="card-testimonial border rounded-4 p-4">
-            <img class="icon-testimonial" src="./assets/img/testimonial/image.svg" />
-            <p>“Lorem ipsum dolor sit amet, elit, sed
-              do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Orci
-              nulla pellentesque dignissim enim.
-              Amet consectetur adipiscing”</p>
-            <h4>Kathy Sullivan</h4>
-            <h5>CEO at ordian it</h5>
-          </div>
-
-
-
         </div>
       </div>
     </section>
+
     <section class="career py-5 ">
       <div class="container d-flex flex-column align-items-center justify-content-center">
         <span class="title p-2">CHOOSE YOUR CAREER</span>
@@ -789,7 +874,7 @@
         </div>
     </section>
 
-    <section class="popular py-5">
+    <section id="blogs" class="popular py-5">
       <div class="container">
         <div class="popular-header pb-5">
           <span class="popular-h py-2 px-3">BLOG POST</span>
@@ -883,7 +968,7 @@
       </div>
     </section>
 
-    <section class="newsLater">
+    <section  class="newsLater">
       <div class="container">
         <div class="newsLater-form d-flex  align-items-center justify-content-center">
           <div class=" left-newsLater align-items-center justify-content-center">
@@ -977,12 +1062,6 @@
       </div>
     </div>
   </footer>
-  <!-- Splide JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-
-  <!-- Auto Scroll Extension -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.4/dist/js/splide-extension-auto-scroll.min.js"></script>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
