--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris..</p>
-              <div class="d-flex flex-row gap-2">
+              <div class="bottom-side d-flex gap-3">
                 <div class="left-side">
                   <h3>FlEXIBLE CLASSNAMEES</h3>
                   <p>Suspendisse ultrice gravida dictum
@@ -673,7 +673,7 @@
 
       </div>
     </section>
-    <section class="testimonial pb-5">
+   <section class="testimonial pb-5">
       <div class="container d-flex flex-column align-items-center justify-content-center gap-3">
         <div class="testimonial-header rounded-pill">
           <div class="testimonial-icon">
@@ -872,7 +872,7 @@
             </div>
           </div>
         </div>
-    </section>
+    </section> 
 
     <section id="blogs" class="popular py-5">
       <div class="container">
